# gitlab-matrix-webhook

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tests/: test_gitlab_matrix_webhook.py
webhook/: element.py  main.py  models.py
webhook/models/: __init__.py  merge_request.py  push.py  webhook.py
